project1/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 101553892293.dkr.ecr.ap-northeast-2.amazonaws.com/back:latest
        ports:
        - containerPort: 3000
        command: ["sh", "-c"]
        args: ["mkdir -p /tmp/app && cp /app/* /tmp/app/ && cd /tmp/app && npm install && node server.js"]
        volumeMounts:
        - name: backend-code
          mountPath: /app
        workingDir: /tmp/app
      volumes:
      - name: backend-code
        configMap:
          name: backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
